--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,8 +1,10 @@
 .App {
   text-align: center;
+
+
+ /* text-align: center; */
+font-family: 'ZCOOL QingKe HuangYou', cursive;
 }
-
-
 .App-header {
   background-color: #222;
   height: 150px;
