--- a/src/components/ProjectPage/ProjectPage.css
+++ b/src/components/ProjectPage/ProjectPage.css
@@ -1,27 +1,32 @@
 .github-logo img {
-    margin-top: 5px;
-    margin-bottom: 10px;
-    width: 90px;
-    opacity: 1;
+  margin-top: 5px;
+  margin-bottom: 10px;
+  width: 90px;
+  opacity: 1;
 }
 
 .github-logo {
-    background-image: linear-gradient(to top, rgba(0, 150, 136,.4), rgba(0, 150, 136,1));
-    /* background-color: linear-gradient(rgba(199, 199, 199, 0.1), rgba(114, 114, 114, 0.9)); */
-    /* opacity: .7; */
-    height: 160px;
-    border-bottom: 1px solid rgb(170, 170, 170);
-    color: white;
+  background-image: linear-gradient(
+    to top,
+    /* rgba(0, 150, 136, 0.4),
+    rgba(0, 150, 136, 1) */
+     rgba(150, 0, 22, 0.632),
+    rgba(31, 3, 11, 0.975)
+  );
+  /* background-color: linear-gradient(rgba(199, 199, 199, 0.1), rgba(114, 114, 114, 0.9)); */
+  /* opacity: .7; */
+  height: 160px;
+  border-bottom: 1px solid rgb(170, 170, 170);
+  color: white;
 }
 
 .hero-content {
-    /* background-image: linear-gradient(rgba(212, 212, 212, 0.4), rgba(138, 138, 138, 0.9)), url(img/P10003462.JPG); */
-    background-attachment: fixed;
-    background-size: fit;
-    background-position: center top;
-    background-repeat: no-repeat;
-    text-align: center;
-    height: 200vh;
-    /* background-color: #ececec; */
-
-} 
+  /* background-image: linear-gradient(rgba(212, 212, 212, 0.4), rgba(138, 138, 138, 0.9)), url(img/P10003462.JPG); */
+  background-attachment: fixed;
+  background-size: fit;
+  background-position: center top;
+  background-repeat: no-repeat;
+  text-align: center;
+  height: 200vh;
+  background-color: #ececec;
+}
