--- a/src/components/ProjectPage/ProjectPage.css
+++ b/src/components/ProjectPage/ProjectPage.css
@@ -10,8 +10,8 @@
     to top,
     /* rgba(0, 150, 136, 0.4),
     rgba(0, 150, 136, 1) */
-     rgba(118, 18, 18, 0.632),
-    rgba(40, 2, 2, 0.975)
+     #388e3c,
+    #4caf50
   );
   /* background-color: linear-gradient(rgba(199, 199, 199, 0.1), rgba(114, 114, 114, 0.9)); */
   /* opacity: .7; */
