--- a/src/components/ProjectPage/ProjectPage.css
+++ b/src/components/ProjectPage/ProjectPage.css
@@ -21,7 +21,7 @@
 }
 
 .hero-content {
-  /* background-image: linear-gradient(rgba(212, 212, 212, 0.4), rgba(138, 138, 138, 0.9)), url(img/P10003462.JPG); */
+  background-image: linear-gradient(rgba(212, 212, 212, 0.4), rgba(138, 138, 138, 0.9)), url(img/full-stack.jpeg);
   background-attachment: fixed;
   background-size: fit;
   background-position: center top;
